boh spalletti non mi convince
il fatto che orsolini non sia stato convocato per fare spazio a maldini che faceva panchina anche a monza... boh

orecchiette con le cime di rapa a pranzo